--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ EMAIL=datbanol2022@gmail.com
 EMAIL_PASSWORD=dmxjcpvjqphwdkzy
 TOKEN_SECRET=puoinsgqif
 SESSION_SECRET=dmxjcpvjqphwdkzy
+DB_HOST=us-cdbr-east-06.cleardb.net
+DB_USER=b7438e854bf473
+DB_NAME=heroku_eb7103e8626d48b
+DB_PASS=f199afdc
